<?xml version="1.0"?>
<package format="3">
  <name>rosmsg_cpp</name>
  <version>1.0.0</version>
  <description>C++ library for getting full message definition or MD5 sum given message type as string</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ctu-vras/rosmsg_cpp</url>
  <url type="repository">https://github.com/ctu-vras/rosmsg_cpp</url>
  <url type="bugtracker">https://github.com/ctu-vras/rosmsg_cpp/issues</url>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-dev</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-dev</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3</exec_depend>
  <exec_depend>roslib</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>geometry_msgs</test_depend>
</package>
